from 2.5.2 to 2.5.3
- fixing a 2.5.x build issue met when a 2.4.x libdar library is already
  installed in an FreeBSD system.
- improving message and behavior of libdar in lax mod when reading a truncated
  archive
- fixed unclosed filedescriptors problem met when saving a filesystem that has
  not ExtX FSA available
- fixing configure script to be more robust in front of system where gpgme.h is
  installed in non standard path and user did not provide coherent CPPFLAGS,
  LDFLAGS before calling ./configure
- displaying CRC values when listing isolated catalogue using the XML format

from 2.5.1 to 2.5.2
- fixed bug met when permission is denied while reading or writing slices
- fixing bug that avoided creating an archive at the root of the filesystem
- fixing bug met in rare situation while reading in sequential-read mode
  an archive encrypted using gnupg encryption. In that situation libdar
  may fail reading the archive (but succeeds in normal read mode) issuing
  an obscure message (message has also been fixed).
- code simplification, removing field reading_verion from class crypto_sym
  as its parent class tronconneuse already have such information
- removed extra newline displayed by dar at end of execution
- fixed bug avoiding dar to properly read an entry (reporting CRC error)
  when specific sequence of character (start of escape sequence) fall at
  end of the read buffer of the escape layer.
- speed optimization for datetime class
- fixed bug that avoided dar reading archives in sequential read mode
  while reading from a pipe
- fixed bug in non regression test routine provided beside dar/libdar
- fixing display message showing not always in the correct context
- fixing case inversion leading the cache layer not to be used when
  necessary and used when useless while reading an archive
- improved heuristic in dar_manager to determine the date a file has been
  deleted.

from 2.5.0 to 2.5.1