@@ -2,7 +2,7 @@ version 2.5.3
 --------------
 Thanks to Neil Darlow for feedback. Thanks to xloem at sourceforge for bugs
 report, troubleshooting and fixes, great job! Thanks to xloem again for the
-proposed patches.
+proposed patches. Thanks to Matteo Sasso for bug report.
 
 version 2.5.2
 --------------
